bpo-45666: fixes warning with `swprintf` and `%s`